--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,6 +1,3 @@
-$body-color: slateblue;
-
-body {
-  color: $body-color;
-  font-family: sans-serif;
-}
+@import 'variables';
+@import 'vendors';
+@import 'layout';
